--- a/DM553/ExamNotes/Question4.tex
+++ b/DM553/ExamNotes/Question4.tex
@@ -1,5 +1,14 @@
 \chapter{Afgørlighed}
 
+\section{Afgørlighed}%
+\label{sec:afgørlighed}
+
+\begin{note}[Kilder]
+	Video 11
+\end{note}
+
+
+
 \section{Uafgørlighed}%
 \label{sec:label}
 
